--- a/KECReportFormat.tex
+++ b/KECReportFormat.tex
@@ -164,42 +164,42 @@ Nepal
 %command for Approval Letter
 \newcommand{\KECapproval}
 {
-\chapter*{Kantipur Engineering College
-\vskip -10pt}%Required only for Final Defense of Major Project
-\begin{center}
-\fontsize{12.8pt}{1} %size decreaced to adjust department name in single line
-\textbf{
-\MakeUppercase{\submittedTo}\\ %for department name
+%\chapter*{Kantipur Engineering College
+%%\vskip -10pt}%Required only for Final Defense of Major Project
+%\begin{center}
+%\fontsize{12.8pt}{1} %size decreaced to adjust department name in single line
+%\textbf{
+%\MakeUppercase{\submittedTo}\\ %for department name
 }
-\vskip 10pt
-\fontsize{16pt}{1}
-\textbf{APPROVAL LETTER}
-\end{center}
-\vskip -16pt
-\addcontentsline{toc}{chapter}{Approval Letter}%
-The undersigned certify that they have read and recommended to the Institute of Engineering for acceptance, a project report entitled "\projectTitle " submitted by \\
-\submittedBy \\
-in partial fulfillment for the degree of \degree. \par
-{\vspace{25pt}
-..........................................\\
-Supervisor\\
-\supervisor \\
-\degSup\\
-\vspace{25pt}\\
-..........................................\\
-External Examiner\\
-\external\\
-\degExternal\\
-\vspace{25pt}\\
-..........................................\\
-\hod\\
-Head of Department\\
-\submittedTo
-\vspace{10pt}\\
-Date: \defMonth\space\defDay ,\space \defYear
-\singlespacing\par
-} %single spacing for the texts inside {}
-}
+%\vskip 10pt
+%\fontsize{16pt}{1}
+%\textbf{APPROVAL LETTER}
+%\end{center}
+%\vskip -16pt
+%\addcontentsline{toc}{chapter}{Approval Letter}%
+%The undersigned certify that they have read and recommended to the Institute of Engineering for acceptance, a project report entitled "\projectTitle " submitted by \\
+%\submittedBy \\
+%in partial fulfillment for the degree of \degree. \par
+%{\vspace{25pt}
+%..........................................\\
+%Supervisor\\
+%\supervisor \\
+%\degSup\\
+%\vspace{25pt}\\
+%..........................................\\
+%External Examiner\\
+%\external\\
+%\degExternal\\
+%\vspace{25pt}\\
+%..........................................\\
+%$\hod\\
+%Head of Department\\
+%\submittedTo
+%\vspace{10pt}\\
+%Date: \defMonth\space\defDay ,\space \defYear%
+%\singlespacing\par
+%} %single spacing for the texts inside {}
+%}
 
 %command for list of abbreviations
 \newcommand{\KECloa}
@@ -211,8 +211,8 @@ Date: \defMonth\space\defDay ,\space \defYear
 \singlespacing
 \printacronyms[include-classes=abbr, name= ]
 }
-
 }
+
 
 %command for list of symbols
 \newcommand{\KEClos}
